--- a/APIVersionControl/appsettings.json
+++ b/APIVersionControl/appsettings.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "apiversioncontrol.up.railway.app"
 }
